removed Z input from chromaticity options.

--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -379,7 +379,7 @@ for details.
 The color is specified using the format described in the "Color Names"
 section of \fIX(1)\fP.
 .TP
-.B "-blue-primary \fI<X>,<Y>,<Z>"\fP
+.B "-blue-primary \fI<x>,<y>"\fP
 \fRblue chromaticity primary point
 .TP
 .B "-blur \fI<radius>x<sigma>"\fP
@@ -1510,7 +1510,7 @@ that an image gravitates within a tile.  The default gravity is \fICenter\fP
 for this purpose.
 
 .TP
-.B "-green-primary \fI<X>,<Y>,<Z>"\fP
+.B "-green-primary \fI<x>,<y>"\fP
 \fRgreen chromaticity primary point
 .TP
 .B "-help"
@@ -2060,7 +2060,7 @@ Offsets are not used.
 Use \fB-raise\fP to create a raised effect, otherwise use \fB+raise\fP.
 
 .TP
-.B "-red-primary \fI<X>,<Y>,<Z>"\fP
+.B "-red-primary \fI<x>,<y>"\fP
 \fRred chromaticity primary point
 .TP
 .B "-region \fI<width>x<height>{+-}<x>{+-}<y>"\fP
@@ -2591,7 +2591,7 @@ Specify \fIamplitude\fP and \fIwavelength\fP
 of the wave.
 
 .TP
-.B "-white-point \fI<X>,<Y>,<Z>"\fP
+.B "-white-point \fI<x>,<y>"\fP
 \fRchromaticity white point
 .TP
 .B "-window \fI<id>"\fP
