--- a/utilities/composite.1
+++ b/utilities/composite.1
@@ -67,7 +67,7 @@ For a more detailed description of each option, see
 .B "-background \fI<color>"\fP
 \fRthe background color
 .TP
-.B "-blue-primary \fI<X>,<Y>,<Z>"\fP
+.B "-blue-primary \fI<x>,<y>"\fP
 \fRblue chromaticity primary point
 .TP
 .B "-cache \fI<threshold>"\fP
@@ -130,7 +130,7 @@ For a more detailed description of each option, see
 .B "-gravity \fI<type>"\fP
 \fRdirection primitive  gravitates to when annotating the image.
 .TP
-.B "-green-primary \fI<X>,<Y>,<Z>"\fP
+.B "-green-primary \fI<x>,<y>"\fP
 \fRgreen chromaticity primary point
 .TP
 .B "-help"
@@ -160,7 +160,7 @@ For a more detailed description of each option, see
 .B "-quality \fI<value>"\fP
 \fRJPEG/MIFF/PNG compression level
 .TP
-.B "-red-primary \fI<X>,<Y>,<Z>"\fP
+.B "-red-primary \fI<x>,<y>"\fP
 \fRred chromaticity primary point
 .TP
 .B "-resize \fI<width>x<height>{%}{@}{!}{<}{>}"\fP
@@ -211,7 +211,7 @@ For a more detailed description of each option, see
 .B "-watermark \fI<brightness>x<saturation>"\fP
 \fRpercent brightness and saturation of a watermark
 .TP
-.B "-white-point \fI<X>,<Y>,<Z>"\fP
+.B "-white-point \fI<x>,<y>"\fP
 \fRchromaticity white point
 .TP
 .B "-write \fI<filename>"\fP
