--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -60,7 +60,7 @@ For a more detailed description of each option, see
 .B "-background \fI<color>"\fP
 \fRthe background color
 .TP
-.B "-blue-primary \fI<X>,<Y>,<Z>"\fP
+.B "-blue-primary \fI<x>,<y>"\fP
 \fRblue chromaticity primary point
 .TP
 .B "-blur \fI<radius>x<sigma>"\fP
@@ -189,7 +189,7 @@ For a more detailed description of each option, see
 .B "-gravity \fI<type>"\fP
 \fRdirection primitive  gravitates to when annotating the image.
 .TP
-.B "-green-primary \fI<X>,<Y>,<Z>"\fP
+.B "-green-primary \fI<x>,<y>"\fP
 \fRgreen chromaticity primary point
 .TP
 .B "-help"
@@ -273,7 +273,7 @@ For a more detailed description of each option, see
 .B "-raise \fI<width>x<height>"\fP
 \fRlighten or darken image edges
 .TP
-.B "-red-primary \fI<X>,<Y>,<Z>"\fP
+.B "-red-primary \fI<x>,<y>"\fP
 \fRred chromaticity primary point
 .TP
 .B "-region \fI<width>x<height>{+-}<x>{+-}<y>"\fP
@@ -381,7 +381,7 @@ For a more detailed description of each option, see
 .B "-wave \fI<amplitude>x<wavelength>"\fP
 \fRalter an image along a sine wave
 .TP
-.B "-white-point \fI<X>,<Y>,<Z>"\fP
+.B "-white-point \fI<x>,<y>"\fP
 \fRchromaticity white point
 
 For a more detailed description of each option, see
