--- a/utilities/montage.1
+++ b/utilities/montage.1
@@ -124,7 +124,7 @@ For a more detailed description of each option, see
 .B "-background \fI<color>"\fP
 \fRthe background color
 .TP
-.B "-blue-primary \fI<X>,<Y>,<Z>"\fP
+.B "-blue-primary \fI<x>,<y>"\fP
 \fRblue chromaticity primary point
 .TP
 .B "-blur \fI<radius>x<sigma>"\fP
@@ -208,7 +208,7 @@ For a more detailed description of each option, see
 .B "-gravity \fI<type>"\fP
 \fRdirection primitive  gravitates to when annotating the image.
 .TP
-.B "-green-primary \fI<X>,<Y>,<Z>"\fP
+.B "-green-primary \fI<x>,<y>"\fP
 \fRgreen chromaticity primary point
 .TP
 .B "-help"
@@ -247,7 +247,7 @@ For a more detailed description of each option, see
 .B "-quality \fI<value>"\fP
 \fRJPEG/MIFF/PNG compression level
 .TP
-.B "-red-primary \fI<X>,<Y>,<Z>"\fP
+.B "-red-primary \fI<x>,<y>"\fP
 \fRred chromaticity primary point
 .TP
 .B "-resize \fI<width>x<height>{%}{@}{!}{<}{>}"\fP
@@ -304,7 +304,7 @@ For a more detailed description of each option, see
 .B "-version"
 \fRprint ImageMagick version string
 .TP
-.B "-white-point \fI<X>,<Y>,<Z>"\fP
+.B "-white-point \fI<x>,<y>"\fP
 \fRchromaticity white point
 
 For a more detailed description of each option, see
