added -limit option.

--- a/utilities/composite.1
+++ b/utilities/composite.1
@@ -142,6 +142,9 @@ For a more detailed description of each option, see
 .B "-label \fI<name>"\fP
 \fRassign a label to an image
 .TP
+.B "-limit \fI<type> <value>"\fP
+\fRDisk, Map, or Memory resource limit
+.TP
 .B "-matte"
 \fRstore matte channel if the image has one
 .TP
