--- a/utilities/convert.1
+++ b/utilities/convert.1
@@ -281,6 +281,9 @@ For a more detailed description of each option, see
 .B "-level \fI<value>"\fP
 \fRadjust the level of image contrast
 .TP
+.B "-limit \fI<type> <value>"\fP
+\fRDisk, Map, or Memory resource limit
+.TP
 .B "-list \fI<type>"\fP
 \fRthe type of list
 .TP
