--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -418,10 +418,7 @@ details.
 .B "-cache \fI<threshold>"\fP
 \fRmegabytes of memory available to the pixel cache
 
-Image pixels are stored in memory until 80 megabytes of memory have been
-consumed. Subsequent pixel operations are cached on disk. Operations to
-memory are significantly faster but if your computer does not have a sufficient
-amount of free memory you may want to adjust this threshold value.
+This option is deprecated.  It has been replaced by the \fB-limit\fP option.
 
 .TP
 .B "-channel \fI<type>"\fP
@@ -1607,6 +1604,17 @@ Give three point values delineated with commas: black, mid, and white
 (e.g. 10,1.0,65000).  The white and black points range from 0 to MaxRGB
 and mid ranges from 0 to 10.
 
+.TP
+.B "-limit \fI<type> <value>"\fP
+\fRDisk, Map, or Memory resource limit
+
+The value is in Megabytes.  By default all are unlimited.
+When the limit is reached, ImageMagick will fail in some fashion, or
+take compensating actions if possible.
+For example, -limit memory 32 -limit map 64 limits memory
+When the pixel cache reaches the memory limit it uses
+memory mapping.  When that limit is reached it goes to disk.  If disk has
+a hard limit, the program will fail.
 .TP
 .B "-linewidth"
 \fRthe line width for subsequent draw operations
