--- a/utilities/animate.1
+++ b/utilities/animate.1
@@ -134,6 +134,9 @@ For a more detailed description of each option, see
 .B "-interlace \fI<type>"\fP
 \fRthe type of interlacing scheme
 .TP
+.B "-limit \fI<type> <value>"\fP
+\fRDisk, Map, or Memory resource limit
+.TP
 .B "-map \fI<type>"\fP
 \fR
 display image using this type.
