--- a/utilities/display.1
+++ b/utilities/display.1
@@ -255,6 +255,9 @@ For a more detailed description of each option, see
 .B "-label \fI<name>"\fP
 \fRassign a label to an image
 .TP
+.B "-limit \fI<type> <value>"\fP
+\fRDisk, Map, or Memory resource limit
+.TP
 .B "-magnify \fI<factor>"\fP
 \fRmagnify the image
 .TP
