--- a/utilities/identify.1
+++ b/utilities/identify.1
@@ -69,6 +69,9 @@ For a more detailed description of each option, see
 .B "-interlace \fI<type>"\fP
 \fRthe type of interlacing scheme
 .TP
+.B "-limit \fI<type> <value>"\fP
+\fRDisk, Map, or Memory resource limit
+.TP
 .B "-ping"
 \fRefficiently determine image characteristics
 .TP
