--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -207,6 +207,9 @@ For a more detailed description of each option, see
 .B "-level \fI<value>"\fP
 \fRadjust the level of image contrast
 .TP
+.B "-limit \fI<type> <value>"\fP
+\fRDisk, Map, or Memory resource limit
+.TP
 .B "-linewidth"
 \fRthe line width for subsequent draw operations
 .TP
