--- a/utilities/conjure.1
+++ b/utilities/conjure.1
@@ -90,7 +90,7 @@ For a more detailed description of each option, see
 \fIImageMagick(1)\fP.
 
 .TP
-.B "-debug"
+.B "-debug \fI<event-mask>"\fP
 \fRenable debug printout
 .TP
 .B "-help"
