--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -108,7 +108,7 @@ For a more detailed description of each option, see
 .B "-cycle \fI<amount>"\fP
 \fRdisplace image colormap by amount
 .TP
-.B "-debug"
+.B "-debug \fI<event-mask>"\fP
 \fRenable debug printout
 .TP
 .B "-delay \fI<1/100ths of a second>"\fP
