--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -891,8 +891,18 @@ specified geometry extends beyond the dimensions of the input image.
 shifted.
 
 .TP
-.B "-debug"
+.B "-debug \fI<event-mask>"\fP
 \fRenable debug printout
+
+The event-mask specifies which events are to be logged.  It
+can be either NoEvents, AllEvents, or a mask constructed
+by the union of one or more of ConfigureEvent, AnnotateEvent,
+RenderEvent, LocaleEvent, CoderEvent,
+X11Event, CacheEvent, or BlobEvent, using quotation
+marks to hide the OR symbol.  For example, to log cache and blob events,
+use
+
+    convert -debug "CacheEvent|BlobEvent" rose: rose.png
 .TP
 .B "-deconstruct"
 \fRbreak down an image sequence into constituent parts
