--- a/utilities/animate.1
+++ b/utilities/animate.1
@@ -89,7 +89,7 @@ For a more detailed description of each option, see
 .B "-crop \fI<width>x<height>{+-}<x>{+-}<y>{%}"\fP
 \fRpreferred size and location of the cropped image
 .TP
-.B "-debug"
+.B "-debug \fI<event-mask>"\fP
 \fRenable debug printout
 .TP
 .B "-delay \fI<1/100ths of a second>"\fP
