--- a/utilities/convert.1
+++ b/utilities/convert.1
@@ -176,7 +176,7 @@ For a more detailed description of each option, see
 .B "-cycle \fI<amount>"\fP
 \fRdisplace image colormap by amount
 .TP
-.B "-debug"
+.B "-debug \fI<event-mask>"\fP
 \fRenable debug printout
 .TP
 .B "-deconstruct"
