--- a/utilities/montage.1
+++ b/utilities/montage.1
@@ -160,7 +160,7 @@ For a more detailed description of each option, see
 .B "-crop \fI<width>x<height>{+-}<x>{+-}<y>{%}"\fP
 \fRpreferred size and location of the cropped image
 .TP
-.B "-debug"
+.B "-debug \fI<event-mask>"\fP
 \fRenable debug printout
 .TP
 .B "-density \fI<width>x<height>"\fP
