--- a/utilities/identify.1
+++ b/utilities/identify.1
@@ -51,7 +51,7 @@ For a more detailed description of each option, see
 .B "-cache \fI<threshold>"\fP
 \fRmegabytes of memory available to the pixel cache
 .TP
-.B "-debug \fI<event-mask>"\fP
+.B "-debug \fI<events>"\fP
 \fRenable debug printout
 .TP
 .B "-density \fI<width>x<height>"\fP
