--- a/utilities/composite.1
+++ b/utilities/composite.1
@@ -88,7 +88,7 @@ For a more detailed description of each option, see
 .B "-compress \fI<type>"\fP
 \fRthe type of image compression
 .TP
-.B "-debug \fI<event-mask>"\fP
+.B "-debug \fI<events>"\fP
 \fRenable debug printout
 .TP
 .B "-density \fI<width>x<height>"\fP
