--- a/utilities/import.1
+++ b/utilities/import.1
@@ -75,7 +75,7 @@ For a more detailed description of each option, see
 .B "-crop \fI<width>x<height>{+-}<x>{+-}<y>{%}"\fP
 \fRpreferred size and location of the cropped image
 .TP
-.B "-debug \fI<event-mask>"\fP
+.B "-debug \fI<events>"\fP
 \fRenable debug printout
 .TP
 .B "-delay \fI<1/100ths of a second>"\fP
