--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-29  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
+  * Under Windows, a DllMain function which automatically initializes
+    ImageMagick (when ImageMagick is built using DLLs) may be added
+    by defining ProvideDllMain in magick_config.h
+
 2002-09-28  Cristy  <cristy@mystic.es.dupont.com>
   * Added resource consumption methods, see magick/resource.c.
 
