--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2002-09-29  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
+  * Updated to Automake 1.7.
+
+2002-09-29  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
   * Under Windows, a DllMain function which automatically initializes
     ImageMagick (when ImageMagick is built using DLLs) may be added
     by defining ProvideDllMain in magick_config.h
