--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-10--1  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
+  * Added draw.h "DrawGet" equivalents to most of the "DrawSet"
+    functions.
+  * Added an array size argument to DrawSetDashPattern and got
+    rid of the zero-termination garbage.
+  o Remove 'Set' from the names of draw.h functions which update
+    the current affine transformation array (e.g. DrawSetRotate
+    becomes DrawRotate).
+
 2002-09-29  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
   * Updated to Automake 1.7.
 
