--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-12  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
+  * Use ImageMagick release number to allow multiple ImageMagick
+    releases to co-exist without interference on the same machine.
+
 2002-10-09  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
   * Decided that DrawGet functions should return by value.
 
