*** empty log message ***

--- a/utilities/display.1
+++ b/utilities/display.1
@@ -585,7 +585,7 @@ For example to display the fourth page preceding the current page, press
              the image.
     Ctl-V    Press to paste a region to
              the image.
-    &lt;     Press to halve the image size.
+    <        Press to halve the image size.
     .        Press to return to the original image size.
     >        Press to double the image size.
     %        Press to resize the image to a width and height
