--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-16  Cristy  <cristy@mystic.es.dupont.com>
+  * -border with a single value now produces correct results
+    (e.g. -border 10).
+
 2002-10-15  Cristy  <cristy@mystic.es.dupont.com>
   * Set locale type LC_NUMERIC to "C".
   * Bug fix for PS2 encoder.
