Updated -debug in identify docs, fixed < typo in display docs, added ALT attribute to pair.com SRC tags, elaborated on gray:raw example in convert docs.

--- a/utilities/identify.1
+++ b/utilities/identify.1
@@ -34,6 +34,10 @@ comment:
     format: MIFF
     comments:
     Imported from MTV raster image: aquarium.mtv
+
+For some formats, additional format-specific information about the file
+will be written if the -debug coder or -debug all option
+is used.
 .SH OPTIONS
 
 Options are processed in command line order. Any option you specify on
