Documented -lat option.

--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -204,6 +204,9 @@ For a more detailed description of each option, see
 .B "-label \fI<name>"\fP
 \fRassign a label to an image
 .TP
+.B "-lat \fI<radius>x<sigma>{+-}<offset>{%}"\fP
+\fRperform local adaptive thresholding
+.TP
 .B "-level \fI<value>"\fP
 \fRadjust the level of image contrast
 .TP
