--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -1611,6 +1611,14 @@ string to print above the image. Specify the label font with
 \fB-font\fP.
 
 .TP
+.B "-lat \fI<radius>x<sigma>{+-}<offset>{%}"\fP
+\fRperform local adaptive thresholding
+
+Perform local adaptive thresholding using the specified radius, sigma,
+and offset.  The offset is a distance in sample space from the mean,
+as an absolute integer ranging from 0 to the maximum sample value or
+as a percentage.
+.TP
 .B "-level \fI<value>"\fP
 \fRadjust the level of image contrast
 
