--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -1618,6 +1618,8 @@ Perform local adaptive thresholding using the specified radius, sigma,
 and offset.  The offset is a distance in sample space from the mean,
 as an absolute integer ranging from 0 to the maximum sample value or
 as a percentage.
+For reasonable results, radius should be larger than sigma.  Use a radius
+of 0 to have the method select a suitable radius.
 .TP
 .B "-level \fI<value>"\fP
 \fRadjust the level of image contrast
