*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2002-10-18  Cristy  <cristy@mystic.es.dupont.com>
   * Fixed Ping() memory leak in PerlMagick.
+  * Fixed -map problem in convert/mogrify utilities.
 
 2002-10-16  Cristy  <cristy@mystic.es.dupont.com>
   * -border with a single value now produces correct results
