--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2002-10-18  Cristy  <cristy@mystic.es.dupont.com>
   * Fixed Ping() memory leak in PerlMagick.
   * Fixed -map problem in convert/mogrify utilities.
+  * Fixed -remote problem with display utility (returns correct error
+    status).
 
 2002-10-16  Cristy  <cristy@mystic.es.dupont.com>
   * -border with a single value now produces correct results
