--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-30  Leonard Rosenthol <leonardr@lazerware.com>
+  * ReadPSDImage() is now fully instrumented with logging
+  * Fixed long standing bug in ReadPSDImage, so it no longer 
+    returns an extra layer
+
 2002-10-29  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
   * Added three output formats: PNG24 (24-bit RGB PNG, opaque only),
     PNG32 32-bit (RGBA PNG, semitransparency OK), and PNG8 (8-bit indexed
