--- a/utilities/identify.1
+++ b/utilities/identify.1
@@ -76,6 +76,8 @@ For a more detailed description of each option, see
 .B "-limit \fI<type> <value>"\fP
 \fRDisk, Map, or Memory resource limit
 .TP
+.B "-log \fI<string>"\fP
+.TP
 .B "-ping"
 \fRefficiently determine image characteristics
 .TP
