--- a/utilities/import.1
+++ b/utilities/import.1
@@ -123,6 +123,8 @@ For a more detailed description of each option, see
 .B "-limit \fI<type> <value>"\fP
 \fRDisk, Map, or Memory resource limit
 .TP
+.B "-log \fI<string>"\fP
+.TP
 .B "-monochrome"
 \fRtransform the image to black and white
 .TP
