--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -219,6 +219,8 @@ For a more detailed description of each option, see
 .B "-list \fI<type>"\fP
 \fRthe type of list
 .TP
+.B "-log \fI<string>"\fP
+.TP
 .B "-loop \fI<iterations>"\fP
 \fRadd Netscape loop extension to your GIF animation
 .TP
