--- a/utilities/composite.1
+++ b/utilities/composite.1
@@ -145,6 +145,8 @@ For a more detailed description of each option, see
 .B "-limit \fI<type> <value>"\fP
 \fRDisk, Map, or Memory resource limit
 .TP
+.B "-log \fI<string>"\fP
+.TP
 .B "-matte"
 \fRstore matte channel if the image has one
 .TP
