--- a/utilities/conjure.1
+++ b/utilities/conjure.1
@@ -96,6 +96,8 @@ For a more detailed description of each option, see
 .B "-help"
 \fRprint usage instructions
 .TP
+.B "-log \fI<string>"\fP
+.TP
 .B "-verbose"
 \fRprint detailed information about the image
 .TP
