--- a/utilities/convert.1
+++ b/utilities/convert.1
@@ -296,6 +296,8 @@ For a more detailed description of each option, see
 .B "-list \fI<type>"\fP
 \fRthe type of list
 .TP
+.B "-log \fI<string>"\fP
+.TP
 .B "-loop \fI<iterations>"\fP
 \fRadd Netscape loop extension to your GIF animation
 .TP
