--- a/utilities/display.1
+++ b/utilities/display.1
@@ -258,6 +258,8 @@ For a more detailed description of each option, see
 .B "-limit \fI<type> <value>"\fP
 \fRDisk, Map, or Memory resource limit
 .TP
+.B "-log \fI<string>"\fP
+.TP
 .B "-magnify \fI<factor>"\fP
 \fRmagnify the image
 .TP
