--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,8 @@
 2002-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
-  * Modified IMdisplay so that Magick++ Images are stored by
-    value rather than via pointer.
-  * IMdisplay now uses minify(), magnify(), and zoom() methods
-    where appropriate.
+  * Modified IMdisplay so that Magick++ Images are stored by value rather
+    than via pointer.
+  * IMdisplay now uses minify(), magnify(), and zoom() methods where
+    appropriate.
 
 2002-11-04  Cristy  <cristy@mystic.es.dupont.com>
   * Quantizing a DirectClass image with less than 256 unique colors is
@@ -60,7 +60,7 @@
   * Updated to Automake 1.7.1.
 
 2002-10-18  Cristy  <cristy@mystic.es.dupont.com>
-  * PingBlob() improperly set the length memory of BlobInfo to zero.
+  * PingBlob() improperly set the length of BlobInfo to zero.
   * Fixed Ping() memory leak in PerlMagick.
   * Fixed -map problem in convert/mogrify utilities.
   * Fixed -remote problem with display utility (returns correct error
