Record IMdisplay updates.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-11-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+  * Modified IMdisplay so that larger images may be loaded
+    (primarily limited by Windows bitmap size limits).
+  * Added some more file types (EPS, GIF, MIFF, SVG, & WMF) to
+    IMdisplay's file open list.
+
 2002-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Modified IMdisplay so that Magick++ Images are stored by value rather
     than via pointer.
