--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
+2002-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+  * Updated Windows CVS to FreeType 2.1.2.
+
 2002-11-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
-  * Updated CVS to Jasper 1.600.0.
+  * Updated Windows CVS to Jasper 1.600.0.
 
 2002-11-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Verify sanity of sysconf(_SC_PAGE_SIZE) and sysconf(_SC_PHYS_PAGES)
