--- a/Magick++/ChangeLog
+++ b/Magick++/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp (colorMapSize): New method to set, or return
+	the colormap size.
+
 2002-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp (adaptiveThreshold): New method.
