--- a/Magick++/NEWS
+++ b/Magick++/NEWS
@@ -2,6 +2,7 @@ This file records noteworthy changes in Magick++.
 
 (5.5.2)
   * Added adaptiveThreshold() method.
+  * Added colorMapSize() method.
 
 (5.5.1)
   * Fixed a Color memory allocation problem which became evident when
