--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -987,11 +987,13 @@ be treated after being displayed.
 Here are the valid methods:
 
 
-Undefined       No disposal specified.
-None            Do not dispose between frames.
-Background      Overwrite the image area with background color
-Previous        Overwrite the image area with what was there
-                prior to rendering the image.
+    Undefined       No disposal specified.
+    None            Do not dispose between frames.
+    Background      Overwrite the image area with
+                    the background color.
+    Previous        Overwrite the image area with
+                    what was there prior to rendering
+                    the image.
 .TP
 .B "-dissolve \fI<percent>"\fP
 \fRdissolve an image into another by the given percent
