--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-11-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+  * Moved coder Register/Unregister methods to static.h since
+    they are only needed by static.c.
+  * Removed defunct HDF and libmpeg2 support since it was
+    confusing to users.
+
 2002-11-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * coders/wmf.c: Set white background of embedded bitmaps to transparent
     if the image background is a texture image, not-white, or non-opaque.
