--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-11-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+  * Update to Autoconf 2.55
+
 2002-11-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Moved coder Register/Unregister method prototypes to static.h since
     they are only needed by static.c.
