--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-11-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+  * Update to Autoconf 2.56
+
 2002-11-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Update to Autoconf 2.55
 
