--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-04  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+  * Optimized ConvolveImage() by normalizing the kernel values instead of
+    normalizing the pixels.
+
 2002-12-01  Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
 	* www/formats.html: Add JNG and fix libpng links.
 
