--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
 2002-12-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 	* Added build support for utilities/gm.c
 
+2002-12-06  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+	* Relocated animate, conjure, display, and import functions
+	into command.c.
+	* Added utilities/gm.c; gm is a driver for all of the utility
+	functions (animate, composite, conjure, convert, display, identify,
+	import, mongrify, and montage), which are now run with
+	"gm convert [convert_options]", "gm identify [identify_options]", etc.
+
 2002-12-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 	* coders/pdf.c: Remove bogus code for handling temporary file.
 
